Updated Test ML

--- a/train-ml-model.ipynb
+++ b/train-ml-model.ipynb
@@ -1737,7 +1737,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Confusion Matrix and Classification Report"
+    "#### Confusion Matrices"
    ]
   },
   {
